Changes the example

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
         <div class="search-container">
             <label for="search-input" class="sr-only">Buscar lugar</label>
-            <input type="text" id="search-input" placeholder="Ej: Condominio Plaza del Parque, Caguas" aria-label="Introduce el nombre de un lugar o dirección para buscar en el mapa">
+            <input type="text" id="search-input" placeholder="Ej: San Juan" aria-label="Introduce el nombre de un lugar o dirección para buscar en el mapa">
             <button id="search-button">Buscar</button>
             <div id="search-status" class="search-status" role="status" aria-live="polite"></div>
         </div>
