--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             border-radius: 8px;
             box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2); /* Lighter shadow since it's now embedded */
             display: flex; /* For input and button side-by-side */
-            flex-wrap: wrap; /* NEW: Allow items to wrap to the next line */
+            flex-wrap: wrap; /* Allow items to wrap to the next line */
             gap: 10px; /* Space between flex items */
             align-items: center; /* Vertically align input/button */
             justify-content: center; /* Center input/button if space allows */
@@ -90,7 +90,7 @@
         .search-container button:hover {
             background-color: #003366;
         }
-        /* NEW: Make search-status always take full width within flex container */
+        /* Make search-status always take full width within flex container */
         .search-container .search-status {
             font-size: 0.8em;
             color: #e61d00;
@@ -121,7 +121,7 @@
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
             z-index: 5;
-            max-width: 280px;
+            max-width: 380px; /* Increased max-width for longer text */
         }
         .map-overlay h3 {
             margin: 0 0 10px;
@@ -132,7 +132,7 @@
         }
         .map-overlay .legend-item {
             display: flex;
-            align-items: center;
+            align-items: flex-start; /* Align items to top for multi-line text */
             margin-bottom: 8px;
         }
         .map-overlay .color-box {
@@ -142,6 +142,9 @@
             border: 1px solid rgba(0, 0, 0, 0.2);
             flex-shrink: 0;
             border-radius: 3px;
+        }
+        .map-overlay .legend-item span {
+            line-height: 1.3; /* Adjust line height for readability */
         }
         .map-overlay .attribution {
             font-size: 0.75em;
@@ -250,6 +253,22 @@
             white-space: nowrap;
             border-width: 0;
         }
+
+        /* Styles for the new "Zona Inundable" checkbox and legend toggle */
+        .legend-toggle-item {
+            display: flex;
+            align-items: center;
+            margin-bottom: 15px;
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+        .legend-toggle-item input[type="checkbox"] {
+            margin-right: 10px;
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+            accent-color: #004d99; /* Custom checkbox color */
+        }
     </style>
 </head>
 <body>
@@ -269,22 +288,38 @@
 
     <!-- Legend Overlay -->
     <div class="map-overlay" role="complementary" aria-labelledby="legend-heading">
-        <h3 id="legend-heading">Riesgo de Inundación</h3>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #e61d00;"></div>
-            <span>Alto Riesgo (SFHA - 1% Probabilidad Anual)</span>
+        <div class="legend-toggle-item">
+            <input type="checkbox" id="toggleFloodZones" checked>
+            <label for="toggleFloodZones">Zonas Inundables</label>
         </div>
-        <!-- <div class="legend-item">
-            <div class="color-box" style="background-color: #ffaa00;"></div>
-            <span>Riesgo Moderado (0.2% Probabilidad Anual)</span>
-        </div> -->
-        <!-- REMOVED: "Riesgo Mínimo" entry -->
+        <h3 id="legend-heading">Clasificación de Zonas por FEMA</h3>
         <div class="legend-item">
-            <div class="color-box" style="background-color: #808080;"></div>
-            <span>Peligro Indeterminado</span>
+            <div class="color-box" style="background-color: #FFB3B3;"></div>
+            <span>**A:** (Alto Riesgo - Inundación por creciente, sin nivel base definido)</span>
+        </div>
+        <div class="legend-item">
+            <div class="color-box" style="background-color: #008080;"></div>
+            <span>**AE:** (Alto Riesgo - Inundación por creciente, con nivel base definido)</span>
+        </div>
+        <div class="legend-item">
+            <div class="color-box" style="background-color: #FFFF99;"></div>
+            <span>**AO:** (Alto Riesgo - Inundación superficial, 1-3 pies de profundidad)</span>
+        </div>
+        <div class="legend-item">
+            <div class="color-box" style="background-color: #ADD8E6;"></div>
+            <span>**A Costera / V:** (Alto Riesgo - Inundación costera con riesgo de olas, sin nivel base definido)</span>
+        </div>
+        <div class="legend-item">
+            <div class="color-box" style="background-color: #FF8C00;"></div>
+            <span>**VE:** (Alto Riesgo - Inundación costera con riesgo de olas, con nivel base definido)</span>
+        </div>
+        <div class="legend-item">
+            <div class="color-box" style="background-color: #D3D3D3;"></div>
+            <span>**X (0.2% Probabilidad Anual):** (Riesgo Moderado - Fuera de la zona de alto riesgo)</span>
         </div>
         <div class="attribution">
-            Datos: FEMA NFHL (2021), <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a>
+            Datos: FEMA NFHL (2021), <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a><br>
+            Imágenes: <a href="https://www.esri.com/en-us/arcgis/products/esri-demographics/data-browser/world-imagery" target="_blank">Esri World Imagery</a>
         </div>
     </div>
 
@@ -297,7 +332,6 @@
         function adjustMapTop() {
             const headerHeight = document.getElementById('app-header').offsetHeight;
             document.getElementById('map').style.top = headerHeight + 'px';
-            // Search container is now inside the header, so no separate top adjustment needed
         }
 
         window.addEventListener('load', adjustMapTop);
@@ -308,34 +342,30 @@
             style: {
                 version: 8,
                 sources: {
-                    osm: {
+                    // CAMBIO CLAVE AQUÍ: Fuente de imágenes satelitales de ESRI
+                    'esri-satellite': {
                         type: 'raster',
                         tiles: [
-                            'https://a.tile.openstreetmap.org/{z}/{x}/{y}.png',
-                            'https://b.tile.openstreetmap.org/{z}/{x}/{y}.png',
-                            'https://c.tile.openstreetmap.org/{z}/{x}/{y}.png'
+                            'https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}'
                         ],
                         tileSize: 256,
-                        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contribuidores'
+                        attribution: 'Imágenes: <a href="https://www.esri.com/en-us/arcgis/products/esri-demographics/data-browser/world-imagery" target="_blank">Esri World Imagery</a>'
                     }
                 },
                 layers: [
+                    // CAMBIO CLAVE AQUÍ: Capa de imágenes satelitales
                     {
-                        id: 'osm-tiles',
+                        id: 'esri-satellite-tiles',
                         type: 'raster',
-                        source: 'osm',
+                        source: 'esri-satellite',
                         minzoom: 0,
-                        maxzoom: 19
+                        maxzoom: 20 // Mayor zoom para detalle satelital
                     }
                 ]
             },
             center: [-66.5901, 18.2208], // starting position [lng, lat] for Puerto Rico
-            zoom: 9 // starting zoom
+            zoom: 10 // Aumentado el zoom inicial para ver mejor el satélite
         });
-
-        // REMOVED: MapLibre GL JS navigation controls (zoom buttons)
-        // REMOVED: MapLibre GL JS scale control
-        // These are now hidden by CSS for all views, as requested.
 
         // Marker for search results
         let searchResultMarker = null;
@@ -467,18 +497,21 @@
                     'fill-color': [
                         'match',
                         ['get', 'FLD_ZONE'],
-                        ['A', 'AE', 'AH', 'AO', 'AR', 'A99', 'V', 'VE'], '#e61d00', // Alto Riesgo (Rojo)
-                        ['X500'], '#ffaa00', // Riesgo Moderado (Naranja) - Note: 'X' (unshaded) is not here
-                        ['D'], '#808080', // Peligro Indeterminado (Gris)
-                        'rgba(0,0,0,0)' // DEFAULT: Make anything else (like 'X' unshaded) fully transparent
+                        // Mapping to image colors and zones
+                        ['A'], '#FFB3B3',      // Light Red/Pink for A
+                        ['AE'], '#008080',     // Teal for AE
+                        ['AO'], '#FFFF99',     // Light Yellow for AO
+                        ['V'], '#ADD8E6',      // Light Blue for V (A Costera)
+                        ['VE'], '#FF8C00',     // Orange for VE
+                        ['X500'], '#D3D3D3',   // Light Grey for X (0.2%)
+                        'rgba(0,0,0,0)'        // Default: fully transparent for other zones (e.g., X unshaded, D, etc.)
                     ],
                     'fill-opacity': [
                         'match',
                         ['get', 'FLD_ZONE'],
-                        ['A', 'AE', 'AH', 'AO', 'AR', 'A99', 'V', 'VE'], 0.6,
-                        ['X500'], 0.4,
-                        ['D'], 0.4,
-                        0 // DEFAULT: Make anything else (like 'X' unshaded) fully transparent
+                        ['A', 'AE', 'AO', 'V', 'VE'], 0.6, // High risk opacity
+                        ['X500'], 0.4,                    // Moderate risk opacity
+                        0                                 // Default: transparent
                     ]
                 }
             });
@@ -491,19 +524,21 @@
                     'line-color': [
                         'match',
                         ['get', 'FLD_ZONE'],
-                        ['A', 'AE', 'AH', 'AO', 'AR', 'A99', 'V', 'VE'], '#990000', // Rojo más oscuro
-                        ['X500'], '#cc8800', // Naranja más oscuro
-                        ['D'], '#555555', // Gris más oscuro
-                        'rgba(0,0,0,0)' // DEFAULT: Make anything else (like 'X' unshaded) fully transparent
+                        ['A'], '#CC9999',      // Darker pink
+                        ['AE'], '#006666',     // Darker teal
+                        ['AO'], '#CCCC00',     // Darker yellow
+                        ['V'], '#6699CC',      // Darker light blue
+                        ['VE'], '#CC6600',     // Darker orange
+                        ['X500'], '#A0A0A0',   // Darker grey
+                        'rgba(0,0,0,0)'        // Default: fully transparent
                     ],
                     'line-width': 1.5,
                     'line-opacity': [
                         'match',
                         ['get', 'FLD_ZONE'],
-                        ['A', 'AE', 'AH', 'AO', 'AR', 'A99', 'V', 'VE'], 0.8,
-                        ['X500'], 0.7,
-                        ['D'], 0.7,
-                        0 // DEFAULT: Make anything else (like 'X' unshaded) fully transparent
+                        ['A', 'AE', 'AO', 'V', 'VE'], 0.8, // High risk opacity
+                        ['X500'], 0.7,                    // Moderate risk opacity
+                        0                                 // Default: transparent
                     ]
                 }
             });
@@ -513,7 +548,7 @@
                 const sfhaText = properties.SFHA_TF === 'T' ? 'Sí (Área Especial de Riesgo de Inundación)' : (properties.SFHA_TF === 'F' ? 'No (Fuera de SFHA)' : 'N/A');
 
                 // Only show popup if it's a zone we're actually displaying
-                if (properties.FLD_ZONE && (['A', 'AE', 'AH', 'AO', 'AR', 'A99', 'V', 'VE', 'X500', 'D'].includes(properties.FLD_ZONE))) {
+                if (properties.FLD_ZONE && (['A', 'AE', 'AO', 'V', 'VE', 'X500'].includes(properties.FLD_ZONE))) {
                     new maplibregl.Popup()
                         .setLngLat(e.lngLat)
                         .setHTML(`
@@ -530,6 +565,14 @@
             });
             map.on('mouseleave', 'flood-zones-fill', () => {
                 map.getCanvas().style.cursor = '';
+            });
+
+            // Toggle Flood Zones Visibility
+            const toggleFloodZonesCheckbox = document.getElementById('toggleFloodZones');
+            toggleFloodZonesCheckbox.addEventListener('change', (event) => {
+                const visibility = event.target.checked ? 'visible' : 'none';
+                map.setLayoutProperty('flood-zones-fill', 'visibility', visibility);
+                map.setLayoutProperty('flood-zones-borders', 'visibility', visibility);
             });
         });
     </script>
