--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         /* Header / Banner - Ahora incluye la barra de búsqueda */
         #app-header {
-            background-color: #004d99; /* Dark blue, inspired by PR flag */
-            color: #fff;
+            background-color: #002e74; /* Dark blue, inspired by PR flag */
+            color: #e2e1dd;
             padding: 15px 20px;
             text-align: center;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -74,7 +74,7 @@
             color: #888;
         }
         .search-container input[type="text"]:focus {
-            border-color: #004d99;
+            border-color: #005c99;
             box-shadow: 0 0 0 2px rgba(0, 77, 153, 0.2);
         }
         .search-container button {
@@ -123,13 +123,46 @@
             z-index: 5;
             max-width: 380px; /* Increased max-width for longer text */
         }
-        .map-overlay h3 {
-            margin: 0 0 10px;
+        /* Legend Title Bar (clickable header) */
+        .legend-title-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between; /* Puts title and icon at ends */
+            margin-bottom: 10px;
             font-size: 1.15em;
-            color: #004d99;
+            color: #005c99;
             border-bottom: 1px solid #eee;
             padding-bottom: 5px;
+            cursor: pointer;
+            user-select: none; /* Prevent text selection on click */
         }
+        .legend-title-bar:hover {
+            opacity: 0.8;
+        }
+        .legend-title-bar h3 {
+            margin: 0; /* Override default h3 margin */
+            flex-grow: 1; /* Allow h3 to take space */
+            text-align: left;
+        }
+        .toggle-icon {
+            margin-left: 10px;
+            font-size: 1.2em;
+            transition: transform 0.2s ease-out;
+        }
+        .toggle-icon.rotated {
+            transform: rotate(-180deg);
+        }
+
+        /* Legend Details Container (collapsible content) */
+        .legend-details-container {
+            max-height: 500px; /* Initial height for expanded state (can be auto/larger) */
+            overflow: hidden;
+            transition: max-height 0.3s ease-out; /* Smooth transition */
+        }
+        .legend-details-container.collapsed {
+            max-height: 0;
+        }
+
         .map-overlay .legend-item {
             display: flex;
             align-items: flex-start; /* Align items to top for multi-line text */
@@ -254,13 +287,13 @@
             border-width: 0;
         }
 
-        /* Styles for the new "Zona Inundable" checkbox and legend toggle */
+        /* Styles for the "Zona Inundable" checkbox */
         .legend-toggle-item {
             display: flex;
             align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 15px; /* Spacing below this item */
             font-weight: bold;
-            font-size: 1.1em;
+            font-size: 1em; /* Adjusted to fit better within collapsed area */
         }
         .legend-toggle-item input[type="checkbox"] {
             margin-right: 10px;
@@ -287,39 +320,44 @@
     <div id="map" role="application" aria-label="Mapa interactivo de zonas de riesgo de inundación"></div>
 
     <!-- Legend Overlay -->
-    <div class="map-overlay" role="complementary" aria-labelledby="legend-heading">
-        <div class="legend-toggle-item">
-            <input type="checkbox" id="toggleFloodZones" checked>
-            <label for="toggleFloodZones">Zonas Inundables</label>
+    <div class="map-overlay" role="complementary">
+        <div class="legend-title-bar" role="button" tabindex="0" aria-expanded="true" aria-controls="legend-details-container">
+            <h3 id="legend-heading">Clasificación de Zonas por FEMA</h3>
+            <span class="toggle-icon">▲</span> <!-- Up arrow for default open state -->
         </div>
-        <h3 id="legend-heading">Clasificación de Zonas por FEMA</h3>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #FFB3B3;"></div>
-            <span>**A:** (Alto Riesgo - Inundación por creciente, sin nivel base definido)</span>
-        </div>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #008080;"></div>
-            <span>**AE:** (Alto Riesgo - Inundación por creciente, con nivel base definido)</span>
-        </div>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #FFFF99;"></div>
-            <span>**AO:** (Alto Riesgo - Inundación superficial, 1-3 pies de profundidad)</span>
-        </div>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #ADD8E6;"></div>
-            <span>**A Costera / V:** (Alto Riesgo - Inundación costera con riesgo de olas, sin nivel base definido)</span>
-        </div>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #FF8C00;"></div>
-            <span>**VE:** (Alto Riesgo - Inundación costera con riesgo de olas, con nivel base definido)</span>
-        </div>
-        <div class="legend-item">
-            <div class="color-box" style="background-color: #D3D3D3;"></div>
-            <span>**X (0.2% Probabilidad Anual):** (Riesgo Moderado - Fuera de la zona de alto riesgo)</span>
-        </div>
-        <div class="attribution">
-            Datos: FEMA NFHL (2021), <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a><br>
-            Imágenes: <a href="https://www.esri.com/en-us/arcgis/products/esri-demographics/data-browser/world-imagery" target="_blank">Esri World Imagery</a>
+        <div class="legend-details-container" id="legend-details-container">
+            <div class="legend-toggle-item">
+                <input type="checkbox" id="toggleFloodZones" checked>
+                <label for="toggleFloodZones">Zonas Inundables</label>
+            </div>
+            <div class="legend-item">
+                <div class="color-box" style="background-color: #FFB3B3;"></div>
+                <span>**A:** (Alto Riesgo - Inundación por creciente, sin nivel base definido)</span>
+            </div>
+            <div class="legend-item">
+                <div class="color-box" style="background-color: #008080;"></div>
+                <span>**AE:** (Alto Riesgo - Inundación por creciente, con nivel base definido)</span>
+            </div>
+            <div class="legend-item">
+                <div class="color-box" style="background-color: #FFFF99;"></div>
+                <span>**AO:** (Alto Riesgo - Inundación superficial, 1-3 pies de profundidad)</span>
+            </div>
+            <div class="legend-item">
+                <div class="color-box" style="background-color: #ADD8E6;"></div>
+                <span>**A Costera / V:** (Alto Riesgo - Inundación costera con riesgo de olas, sin nivel base definido)</span>
+            </div>
+            <div class="legend-item">
+                <div class="color-box" style="background-color: #FF8C00;"></div>
+                <span>**VE:** (Alto Riesgo - Inundación costera con riesgo de olas, con nivel base definido)</span>
+            </div>
+            <div class="legend-item">
+                <div class="color-box" style="background-color: #D3D3D3;"></div>
+                <span>**X (0.2% Probabilidad Anual):** (Riesgo Moderado - Fuera de la zona de alto riesgo)</span>
+            </div>
+            <div class="attribution">
+                Datos: FEMA NFHL (2021), <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a><br>
+                Imágenes: <a href="https://www.esri.com/en-us/arcgis/products/esri-demographics/data-browser/world-imagery" target="_blank">Esri World Imagery</a>
+            </div>
         </div>
     </div>
 
@@ -342,7 +380,6 @@
             style: {
                 version: 8,
                 sources: {
-                    // CAMBIO CLAVE AQUÍ: Fuente de imágenes satelitales de ESRI
                     'esri-satellite': {
                         type: 'raster',
                         tiles: [
@@ -353,18 +390,17 @@
                     }
                 },
                 layers: [
-                    // CAMBIO CLAVE AQUÍ: Capa de imágenes satelitales
                     {
                         id: 'esri-satellite-tiles',
                         type: 'raster',
                         source: 'esri-satellite',
                         minzoom: 0,
-                        maxzoom: 20 // Mayor zoom para detalle satelital
+                        maxzoom: 20
                     }
                 ]
             },
-            center: [-66.5901, 18.2208], // starting position [lng, lat] for Puerto Rico
-            zoom: 10 // Aumentado el zoom inicial para ver mejor el satélite
+            center: [-66.35, 18.0], // starting position [lng, lat] for Puerto Rico
+            zoom: 8 // Increased initial zoom
         });
 
         // Marker for search results
@@ -573,6 +609,17 @@
                 const visibility = event.target.checked ? 'visible' : 'none';
                 map.setLayoutProperty('flood-zones-fill', 'visibility', visibility);
                 map.setLayoutProperty('flood-zones-borders', 'visibility', visibility);
+            });
+
+            // Toggle Legend Details Visibility
+            const legendTitleBar = document.querySelector('.legend-title-bar');
+            const legendDetailsContainer = document.getElementById('legend-details-container');
+            const toggleIcon = legendTitleBar.querySelector('.toggle-icon');
+
+            legendTitleBar.addEventListener('click', () => {
+                const isCollapsed = legendDetailsContainer.classList.toggle('collapsed');
+                toggleIcon.classList.toggle('rotated');
+                legendTitleBar.setAttribute('aria-expanded', !isCollapsed); // Update ARIA attribute
             });
         });
     </script>
