--- a/index.html
+++ b/index.html
@@ -332,27 +332,27 @@
             </div>
             <div class="legend-item">
                 <div class="color-box" style="background-color: #FFB3B3;"></div>
-                <span>**A:** (Alto Riesgo - Inundación por creciente, sin nivel base definido)</span>
+                <span><strong>A</strong>: (Alto Riesgo - Inundación por creciente, sin nivel base definido)</span>
             </div>
             <div class="legend-item">
                 <div class="color-box" style="background-color: #008080;"></div>
-                <span>**AE:** (Alto Riesgo - Inundación por creciente, con nivel base definido)</span>
+                <span><strong>AE</strong> (Alto Riesgo - Inundación por creciente, con nivel base definido)</span>
             </div>
             <div class="legend-item">
                 <div class="color-box" style="background-color: #FFFF99;"></div>
-                <span>**AO:** (Alto Riesgo - Inundación superficial, 1-3 pies de profundidad)</span>
+                <span><strong>AO</strong>: (Alto Riesgo - Inundación superficial, 1-3 pies de profundidad)</span>
             </div>
             <div class="legend-item">
                 <div class="color-box" style="background-color: #ADD8E6;"></div>
-                <span>**A Costera / V:** (Alto Riesgo - Inundación costera con riesgo de olas, sin nivel base definido)</span>
+                <span><strong>A Costera / V</strong>: (Alto Riesgo - Inundación costera con riesgo de olas, sin nivel base definido)</span>
             </div>
             <div class="legend-item">
                 <div class="color-box" style="background-color: #FF8C00;"></div>
-                <span>**VE:** (Alto Riesgo - Inundación costera con riesgo de olas, con nivel base definido)</span>
+                <span><strong>VE</strong>: (Alto Riesgo - Inundación costera con riesgo de olas, con nivel base definido)</span>
             </div>
             <div class="legend-item">
                 <div class="color-box" style="background-color: #D3D3D3;"></div>
-                <span>**X (0.2% Probabilidad Anual):** (Riesgo Moderado - Fuera de la zona de alto riesgo)</span>
+                <span><strong>X</strong>: (0.2% Probabilidad Anual): (Riesgo Moderado - Fuera de la zona de alto riesgo)</span>
             </div>
             <div class="attribution">
                 Datos: FEMA NFHL (2021), <a href="https://www.openstreetmap.org/copyright" target="_blank">OpenStreetMap</a><br>
