--- a/index.html
+++ b/index.html
@@ -4,23 +4,17 @@
     <meta charset="utf-8" />
     <title>Mapa de Zonas Inundables de Puerto Rico</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
+    <!-- SEO: Meta Description -->
+    <meta name="description" content="Mapa interactivo de las zonas de riesgo de inundación en Puerto Rico, con datos de FEMA. Busca tu área y conoce tu riesgo." />
+
+    <!-- Performance: Prefetch/Preload critical resources (MapLibre CSS and JS) -->
+    <link rel="preload" href="https://unpkg.com/maplibre-gl@4.3.0/dist/maplibre-gl.css" as="style" />
+    <link rel="preload" href="https://unpkg.com/maplibre-gl@4.3.0/dist/maplibre-gl.js" as="script" />
+    <link rel="preload" href="logo.png" as="image" type="image/png" />
+    <!-- Optional: Prefetch your GeoJSON data if it's consistently needed -->
+    <link rel="preload" href="data/puerto_rico_municipalities.geojson" as="fetch" crossorigin="anonymous" />
+    <link rel="preload" href="data/puerto_rico_flood_hazards_simplified.geojson" as="fetch" crossorigin="anonymous" />
+
 
     <!-- MapLibre GL JS CSS -->
     <link href="https://unpkg.com/maplibre-gl@4.3.0/dist/maplibre-gl.css" rel="stylesheet" />
@@ -65,6 +59,9 @@
             height: 60px; /* Adjust size as needed */
             width: auto;
             flex-shrink: 0; /* Prevent the logo from shrinking on smaller screens */
+            /* Performance: Ensure image is optimized and potentially set max-width for fluid sizing */
+            max-width: 100px; /* Example: set a max-width if original is very large */
+            height: auto; /* Maintain aspect ratio */
         }
 
         /* NEW: Wrapper for H1 and P to manage their text alignment */
@@ -361,7 +358,7 @@
 <body>
     <header id="app-header" role="banner">
         <div class="header-main-content">
-            <img src="logo.png" alt="Logo de la organización" class="header-logo">
+            <img src="logo_smallest.webp" alt="Logo de la organización" class="header-logo">
             <div class="header-text-group">
                 <h1>Mapa de Riesgo de Inundación de Puerto Rico</h1>
                 <p>Identifica áreas propensas a inundaciones para tu seguridad y preparación.</p>
@@ -370,13 +367,16 @@
 
         <div class="search-container">
             <label for="search-input" class="sr-only">Buscar lugar</label>
-            <input type="text" id="search-input" placeholder="Ej: San Juan" aria-label="Introduce el nombre de un lugar o dirección para buscar en el mapa">
+            <input type="text" id="search-input" placeholder="Ej: Condominio Plaza del Parque, Caguas" aria-label="Introduce el nombre de un lugar o dirección para buscar en el mapa">
             <button id="search-button">Buscar</button>
             <div id="search-status" class="search-status" role="status" aria-live="polite"></div>
         </div>
     </header>
 
-    <div id="map" role="application" aria-label="Mapa interactivo de zonas de riesgo de inundación"></div>
+    <main> <!-- NEW: Main content wrapper for accessibility -->
+        <h2 class="sr-only">Contenido Principal del Mapa Interactivo</h2> <!-- NEW: Visually hidden h2 for semantic hierarchy -->
+        <div id="map" role="application" aria-label="Mapa interactivo de zonas de riesgo de inundación"></div>
+    </main>
 
     <!-- Legend Overlay -->
     <div class="map-overlay" role="complementary">
@@ -432,6 +432,13 @@
             document.getElementById('map').style.top = headerHeight + 'px';
         }
 
+        // IMPORTANT: Add error listener for global unhandled errors
+        window.addEventListener('error', (event) => {
+            console.error('Unhandled JavaScript Error:', event.error);
+            // You might want to display a user-friendly message for critical errors
+        });
+
+
         window.addEventListener('load', adjustMapTop);
         window.addEventListener('resize', adjustMapTop);
 
@@ -474,7 +481,7 @@
                 ]
             },
             center: [-66.35, 18.0], // starting position [lng, lat] for Puerto Rico
-            zoom: 8.2 // Increased initial zoom for island view
+            zoom: 8 // Increased initial zoom for island view
         });
 
         // Marker for search results
@@ -546,6 +553,8 @@
             } catch (error) {
                 searchStatus.textContent = `Error en la búsqueda: ${error.message}`;
                 console.error('Geocoding error:', error);
+                // NEW: Use an alert or a persistent notification for critical errors
+                // alert('Ocurrió un error al buscar. Por favor, inténtalo de nuevo más tarde.');
             }
         }
 
@@ -596,7 +605,7 @@
             // 2. Add Flood Zone GeoJSON with Data-Driven Styling
             map.addSource('flood-zones', {
                 type: 'geojson',
-                data: 'data/puerto_rico_alto_riesgo_simplified.geojson' // Using simplified data
+                data: 'data/puerto_rico_flood_hazards_simplified.geojson' // Using simplified data
             });
 
             map.addLayer({
